// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM #cancelLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 39463,
}
`;

exports[`TWAMM #claimEarnings gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 32925,
}
`;

exports[`TWAMM #executeTWAMMOrders gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 364344,
}
`;

exports[`TWAMM #submitLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 121558,
}
`;
